gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20383.d
version https://git-lfs.github.com/spec/v1
oid sha256:7c83a69a9303e7b1c48d419c71ed6cfa703586d6acbf4224967a50ddd8c701dd
size 281
